addad full player

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -964,10 +964,10 @@ main {
   border: none;
   font-size: 17px;
   line-height: 26px;
-  color: #EEE5B5;
+  color: #eeb5ba;
   padding: 10px 20px;
   cursor: pointer;
-  width: 93px;
+  width: 1193px;
   text-align: center;
   cursor: pointer; }
 
